[tool.poetry]
name = "serverless-dataeng-python"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"
packages = [{include = "serverless_dataeng_python"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.133"
params-aws = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
